objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCMC__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the Customer Contact is active or not</description>
        <inlineHelpText>When checked, the Customer Contact is active</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCMC__Language__c</fullName>
        <label>Language</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCMC__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCMC__Previous_Companies__c</fullName>
        <label>Previous Companies</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCMC__Suffix__c</fullName>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SR</fullName>
                </value>
                <value>
                    <fullName>JR</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>PHD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>appirio_core__Last_Access_Date__c</fullName>
        <description>Contains a timestamp for the most recent &quot;login&quot; of this feature user, to be used for PIN expiration.</description>
        <label>Deprecated:Last Access Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>appirio_core__Licensed_Features__c</fullName>
        <label>Deprecated:Licensed Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Timecard Only</fullName>
                </value>
                <value>
                    <fullName>Expenses Only</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>appirio_core__PIN__c</fullName>
        <description>Used to authenticate feature-only users to the Sites pages</description>
        <label>Deprecated:PIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CollectionsCommunicationContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked then the contact acts as the collection communication contact</description>
        <label>Collections Communication Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CollectionsCommunicationPreference__c</fullName>
        <label>Collections Communication Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__EnableEmailNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Email Notification (FM Community)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eContacts__Business_Card__c</fullName>
        <label>Image Data Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eContacts__Created_By_eContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By eContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eContacts__Location_Text__c</fullName>
        <label>Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eContacts__Location__c</fullName>
        <label>Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>eContacts__Secondary_Image__c</fullName>
        <label>Image Data2 Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffbc__BillingContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this contact is sent billing documents for the account to which they belong. You can send billing documents to one contact per account. Select the checkbox for only one of the contacts associated with an account.</description>
        <inlineHelpText>Indicates whether this contact is sent billing documents for the account to which they belong. You can send billing documents to one contact per account. Select the checkbox for only one of the contacts associated with an account.</inlineHelpText>
        <label>Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffpsai__ExpenseReimbursementAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Reimbursement Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>psa_report__Hist_Sch_Utilization__c</fullName>
        <formula>(  pse__Hist_Sch_Utilization_Billable_Hours__c  +  pse__Hist_Sch_Utilization_Credited_Hours__c  )  /  (  pse__Historical_Utilization_Calendar_Hours__c  -  pse__Hist_Sch_Utilization_Excluded_Hours__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hist Sch Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>psa_report__Resource_Name__c</fullName>
        <formula>FirstName &amp;&quot; &quot;&amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__API_Resource_Correlation_Id__c</fullName>
        <externalId>true</externalId>
        <label>API Resource Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Action_Calculate_Utilization__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Action: Calculate Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Update_Current_Time_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Action: Update Current Time Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Update_Date__c</fullName>
        <label>Actuals: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actuals: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Timecards_Without_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if resource should be treated as  &apos;Global&apos; Resources.
&apos;Global&apos; Resources can enter time for any Project, even if that Project normally requires Assignments for Time Entry.</description>
        <inlineHelpText>Check this if resource should be treated as  &apos;Global&apos; Resources.
&apos;Global&apos; Resources can enter time for any Project, even if that Project normally requires Assignments for Time Entry.</inlineHelpText>
        <label>Allow Timecards Without Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Bookings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Credited_Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period_End_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Current Time Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Current Time Period For Resources</relationshipLabel>
        <relationshipName>CurrentTimePeriodForResources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Default_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Cost Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Cost_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Default Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__ERP_Worker_Correlation_Id__c</fullName>
        <description>This records the worker correlation key used within the Foundations system.</description>
        <externalId>true</externalId>
        <inlineHelpText>This records the worker correlation key used within the Foundations system.</inlineHelpText>
        <label>Foundations Worker Correlation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Employment_Status_Effective_Date__c</fullName>
        <inlineHelpText>The date the resource&apos;s employment status becomes effective.</inlineHelpText>
        <label>Employment Status Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Employment_Status__c</fullName>
        <inlineHelpText>The resource&apos;s employment status.</inlineHelpText>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Missing_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to exclude this resource from missing timecard reports</description>
        <label>Exclude From Missing Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Time_Calculations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the user should be excluded from timecard calculations like utilization</inlineHelpText>
        <label>Exclude from Time Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Time_Variance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the resource is excluded from Time Variance calculations.</description>
        <inlineHelpText>If true, the resource is excluded from Time Variance calculations.</inlineHelpText>
        <label>Exclude From Time Variance Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Resource_Planner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to exclude this resource from the resource planner.</inlineHelpText>
        <label>Exclude from Resource Planner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Excluded_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__External_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>External Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__External_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Billable_Hours__c</fullName>
        <description>The historical scheduled utilization billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Credited_Hours__c</fullName>
        <description>The historical scheduled utilization credited hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Excluded_Hours__c</fullName>
        <description>The historical scheduled utilization excluded hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Held_Hours__c</fullName>
        <label>Hist Sch Utilization Held Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Non_Billable_Hrs__c</fullName>
        <description>The historical scheduled utilization non-billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Non Billable Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Billable_Hours__c</fullName>
        <description>The historical utilization billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Calendar_Hours__c</fullName>
        <description>The historical utilization calendar hours for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Calendar Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Credited_Hours__c</fullName>
        <description>The historical utilization credited hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Excluded_Hours__c</fullName>
        <description>The historical utilization excluded hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Non_Billable_Hrs__c</fullName>
        <description>The historical utilization non-billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Non Billable Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Historical_Utilization_Target__c = 0,
IF(pse__Historical_Utilization__c &lt;= 0,0,1),
pse__Historical_Utilization__c / pse__Historical_Utilization_Target__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target_Hours__c</fullName>
        <label>Historical Utilization Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target__c</fullName>
        <formula>IF(pse__Historical_Utilization_Calendar_Hours__c = 0,
0,
pse__Historical_Utilization_Target_Hours__c / pse__Historical_Utilization_Calendar_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical Utilization Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization__c</fullName>
        <description>The historical utilization percentage for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Is_Resource_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resource Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Jira_Correlation_Username__c</fullName>
        <description>Unique ID of the related user in Jira. Used for synchronization.</description>
        <inlineHelpText>Unique ID of the related user in Jira. Used for synchronization. Automatically populates after the user is created in Jira.</inlineHelpText>
        <label>Jira Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Languages__c</fullName>
        <description>This field is not currently used in PSA.</description>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Last_Date__c</fullName>
        <description>A Resource&apos;s last day of employment.</description>
        <inlineHelpText>A Resource&apos;s last day of employment.</inlineHelpText>
        <label>Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Latitude_PSA__c</fullName>
        <label>Latitude (PSA)</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Level__c</fullName>
        <description>This field is not currently used in PSA.</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Longitude_PSA__c</fullName>
        <label>Longitude (PSA)</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Margin__c</fullName>
        <formula>pse__Billings__c + pse__Pass_Through_Billings__c - pse__Internal_Costs__c - pse__External_Costs__c - pse__Expense_Costs__c - pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Other_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Pass_Through_Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pass-Through Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Pre_Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pre-Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Role__c</fullName>
        <label>Resource Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Client Manager</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Consultant</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Revenue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Billable_Hours__c</fullName>
        <description>The scheduled utilization billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Calendar_Hours__c</fullName>
        <description>The scheduled utilization calendar hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Calendar Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Credited_Hours__c</fullName>
        <description>The scheduled utilization credited hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Excluded_Hours__c</fullName>
        <description>The scheduled utilization excluded hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Held_Hours__c</fullName>
        <label>Scheduled Utilization Held Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Non_Billable_Hrs__c</fullName>
        <description>The scheduled utilization non-billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Non Billable Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Scheduled_Utilization_Target__c = 0,
IF(pse__Scheduled_Utilization__c &lt;= 0,0,1),
pse__Scheduled_Utilization__c / pse__Scheduled_Utilization_Target__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target_Hours__c</fullName>
        <label>Scheduled Utilization Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target__c</fullName>
        <formula>IF(pse__Scheduled_Utilization_Calendar_Hours__c = 0,
0,
pse__Scheduled_Utilization_Target_Hours__c / pse__Scheduled_Utilization_Calendar_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Utilization Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization__c</fullName>
        <description>The scheduled utilization percentage for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>